spacing and alignment fixes

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
 
 #qr-canvas {
     max-width: 20rem;
+    width: 100%;
+    height: 100%;
+    border: dashed 2px #00D1B2;  
 }
 
 .canvas-wrapper {
@@ -25,8 +28,11 @@ body {
 }
 
 @media screen and (min-width: 769px), print {
-.file-selector-col {
-    max-width: 28rem;
+    .file-selector-col {
+        max-width: 28rem;
+    }
 }
+
+pre {
+    min-height: 33.5rem    
 }
-  
